name:                redland
version:             0.1.0.0
synopsis:            Redland RDF library bindings
description:         Redland RDF library bindings
license:             BSD3
license-file:        LICENSE
author:              defanor
maintainer:          defanor@uberspace.net
category:            Database
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Redland
                     , Redland.LowLevel
                     , Redland.MidLevel
                     , Redland.Util
  other-extensions:    ForeignFunctionInterface
  build-depends:       base >=4.9 && <5
  default-language:    Haskell2010
  pkgconfig-depends:   raptor2, redland
  build-tools:         hsc2hs
  ghc-options:         -Wall
